[package]
name = "draft-ietf-lamps-pq-composite-kem-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ml-kem = "0.2.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rsa = "0.9.6"
openssl = { version = "*", features = ["vendored"] }
sha2 = "0.10.8"

