[package]
name = "QuantCrypt"
version = "0.1.0"
edition = "2021"
authors = ["Seventh Sense AI"]
license = "Apache-2.0 OR MIT"
rust-version = "1.77.1"
readme = "README.md"
categories = ["cryptography", "algorithms", "data structures"]
keywords = ["crypto", "pqc", "post quantum", "ML-KEM", "FIPS 203"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "uniffi_quantcrypt"

[dependencies]
ml-kem = "0.2.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rsa = "0.9.6"
openssl = { version = "*", features = ["vendored"] }
sha2 = "0.10.8"
der = "0.7.9"
pkcs8 = "0.10.2"
der_derive = "0.7.3"
sha3 = "0.10.8"
hkdf = "0.12.4"
hex = "0.4.3"

